[package]
name = "mc_update"
version = "0.2.2"
authors = ["u296 <u296b3g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = "2"
reqwest = {version = "0.10", features = ["blocking"]}
select = "0.4"
app_dirs = "1"
